syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc CreateObject (CreateRequest) returns (RemoteResult) {}
  rpc ConnectNodes (ConnectRequest) returns (HelloReply) {}
  rpc Init (InitRequest) returns (NodeObject) {}
  rpc Call (CallRequest) returns (RemoteResult) {}
  rpc Apply (ApplyRequest) returns (RemoteResult) {}
  rpc GetAttr(GetAttrRequest) returns (NodeObject) {}
  rpc GetValue(NodeObjectRef) returns (Value) {}
  rpc DelObject(NodeObjectRef) returns (NodeObjectRef) {}
  rpc GetRemoteObject(NodeObjectRef) returns (NodeObject) {}
}

message RemoteResult {
  NodeObject obj = 1;
  map<uint64, uint64> fetch_result = 2;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message NodeObjectRef {
  uint64 id = 1;
  string location = 2;
}

message CallArgs {
  ProtoPyTuple args = 1;
  ProtoPyDict kwargs = 2;
  repeated NodeObjectRef fetch_lists = 3;
}

message CreateRequest {
  string module = 1;
  string qualname = 2;
  CallArgs arg = 3;
} 

message InitRequest {
  repeated string modules = 1;
  repeated string paths = 2;
  uint32 rank=3;
}

message CallRequest {
  uint64 object_id = 1;
  CallArgs arg = 2;
  string attr = 3;
}

message ApplyRequest {
  bytes func = 1;
  CallArgs arg = 2;
}

message ConnectRequest {
  repeated Node nodes = 1;
}

message Node {
  string name = 1;
  string address = 2;
}

message NodeObject {
  ProtoPyAny value = 1;
  uint64 id = 2;
  bytes exception = 3;
  string location = 4;
  string type = 5;
}

message GetAttrRequest {
  uint64 object_id = 1;
  string attr = 2;
}

// message ModuleRef {
//   string module = 1;
//   string qualname = 2;
// }

message Value {
  bytes data = 1;
}

message ProtoPyAny {
  oneof data {
    string str = 1;
    float f32 = 2;
    int32 i32 = 3;
    uint32 u32 = 4;
    int64 i64 = 5;
    uint64 u64 = 6;
    bool boolean = 7;
    bytes bytes = 8;
    ProtoPyTuple tuple = 9;
    ProtoPyList list = 10;
    ProtoPyDict dict = 11;
    NodeObjectRef object_id = 12;
  }
}

message ProtoPyTuple {
  repeated ProtoPyAny items = 1;
}

message ProtoPyList {
  repeated ProtoPyAny items = 2;
}

message ProtoPyDict {
  map<string, ProtoPyAny> map = 3;
}